# docker-cleanup

./: Cargo.toml  README.md
src/: args.rs  docker.rs  images.rs  main.rs  podman.rs
src/adapter/: adapter_impl.rs  edges.rs  entrypoints.rs  mod.rs  properties.rs  schema.graphql  vertex.rs
