[package]
name = "docker-cleanup"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
human-size = { version = "0.4.3", features = ["serde"] }
jiff = { version = "0.2.15", features = ["serde"] }
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
trustfall = "0.8.1"
